I had the subSampleId in the url no need to have in the body
